Major truffle cleanups